decomposition to modules; remove typing dependency; add MailMessage.cc, MailMessage.bcc attrs; specify custom classes email_message_class directly; MailBox._uid_str change type check logic; Change MailMessage attr return types: lists -> tuples; MailBox.fetch add mark_seen param; fix MailMessage.from_ bug when empty;

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,2 @@
 query builder
-decompose
-parse more message attrs (cc, bcc, cc_values ...)
-# for specify custom classes email_message_class = None указать класс сразу
-isinstance ABC in _uid_str
+_uid_str - allow MailBox.fetch generator only
