--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,6 @@
-query builder
+
 _uid_str - allow MailBox.fetch generator only
+
+add SOCKS proxy support - without new dependencies (maybe by including SocksiPy in project)
+
+query builder
