--- a/todo.txt
+++ b/todo.txt
@@ -4,3 +4,5 @@ _uid_str - allow MailBox.fetch generator only
 add SOCKS proxy support - without new dependencies (maybe by including SocksiPy in project)
 
 query builder
+
+login logout context manager
