--- a/todo.txt
+++ b/todo.txt
@@ -15,3 +15,9 @@ SENTON <date> Messages whose [RFC-2822] Date:
 message attributes strong tests
 
 Технические заголовки (RFC-заголовки) писем https://helpdesk.infobox.ru/Knowledgebase/Article/View/624/121/
+
+try to imitate long poll by noop
+
+примеры значений аттрибутов письма
+
+del MailBoxWrongFlagError('Unsupported flag: {}'.format(flag_name)) ?
