--- a/todo.txt
+++ b/todo.txt
@@ -10,6 +10,10 @@ try to imitate long poll by noop
 
 примеры значений аттрибутов письма
 
+fetch INTERNALDATE The internal date of the message. - sent_date?
+
+(UID) - fetch uid_only param
+
 =
 query builder
 -SOCKS proxy support - without new dependencies (maybe by including SocksiPy in project)
@@ -17,4 +21,4 @@ ImapToolsError
 fetch - charset parameter
 del class MailBoxWrongFlagError(Exception):
 check_command_status
-headers - from django.utils.datastructures import MultiValueDict?
+headers - from django.utils.datastructures import MultiValueDict? = dict(a=[],)
