--- a/todo.txt
+++ b/todo.txt
@@ -13,7 +13,7 @@ try to imitate long poll by noop
 +date - datetime.datetime
 +id - _id
 +date_str - original str
-headers - dict(a=[],)
+headers - {str: (str,)}
 (UID) - fetch uid_only param
 fetch INTERNALDATE The internal date of the message. - sent_date?
 примеры значений аттрибутов письма
