--- a/todo.txt
+++ b/todo.txt
@@ -18,7 +18,7 @@ fetch INTERNALDATE The internal date of the message. - sent_date?
 +headers - {str: (str,)}
 +примеры значений аттрибутов письма
 +readme - add fetch default vals
-(UID) - fetch uid_only param
+-fetch uid_only param
 message attributes strong tests
 Технические заголовки (RFC-заголовки) писем https://helpdesk.infobox.ru/Knowledgebase/Article/View/624/121/
 mark live tests
