--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,6 @@
-console mode
-
 try to imitate long poll by noop
 
-fetch INTERNALDATE The internal date of the message. - sent_date?
+fetch INTERNALDATE The internal date of the message.
 
 ===
 
@@ -21,7 +19,7 @@ fetch INTERNALDATE The internal date of the message. - sent_date?
 -fetch uid_only param
 +pairs_to_dict quote
 +fixed folder.set enc dug
-query help
++query help
 message attributes strong tests
 Технические заголовки (RFC-заголовки) писем https://helpdesk.infobox.ru/Knowledgebase/Article/View/624/121/
 mark live tests
