--- a/todo.txt
+++ b/todo.txt
@@ -5,3 +5,7 @@ fetch INTERNALDATE The internal date of the message.
 message attributes strong tests
 
 descriptors for: to, cc, bcc
+
+improve _parse_addresses - From and From: when no valid email in From:
+
+fix msg.text: part.get_content_charset(failobj='utf-8') on: charset="utf-8"Content-Transfer-Encoding: base64
