--- a/todo.txt
+++ b/todo.txt
@@ -6,10 +6,10 @@ message attributes strong tests
 
 ==
 
--write examples
-
+change license: MIT -> Apache License, Version 2.0
 improve utils.decode_value
 improve MailMessage.attachment decoding
 MailBoxFolderManager.status int values in result
-fix query builder - imap prefix notation rules
+fix query builder bugs - imap prefix notation rules
 query builder: The key types are marked with `*` can accepts a sequence of values like list, tuple, set or generator.
+add new examples
