--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,5 @@
 try to imitate long poll by noop
 
 message attributes strong tests
+
+check https://docs.python.org/release/3.8.1/library/email.utils.html
