Fixed bug on folders names with space in folder.MailBoxFolderManager.exists/list

--- a/todo.txt
+++ b/todo.txt
@@ -3,3 +3,5 @@ try to imitate long poll by NOOP
 check https://docs.python.org/release/3.8.1/library/email.utils.html
 
 check possibility to implement SOCKS without/with dependencies
+
+folder.list fails on names with \\ "" chars
