BaseMailBox.fetch headers_only arg fixed

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,5 +1,3 @@
 check https://docs.python.org/release/3.8.1/library/email.utils.html
 
-fix BaseMailBox.fetch headers_only
-
-__getitem__ -> https://docs.python.org/3/library/email.compat32-message.html#email.message.Message.get_all
+__getitem__ -> https://docs.python.org/3/library/email.compat32-message.html#email.message.Message.get_all ?
