--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,1 +1,21 @@
 Release 1.0.0 after 3 month of quiet in issues and merge requests
+
+
+https://stackoverflow.com/questions/72942311/ some to docs?
+    The second problem is that you need to use imap_tools.MailBox.
+    Looking at the documentation and source at the repo it appears that the relevant classes to use are:
+
+        MailBox - for a normal encrypted connection. This is what most email servers use these days, aka IMAPS (imap with SSL/TLS)
+        MailBoxTls - For a STARTTLS connection: this creates a plaintext connection then upgrades
+        it later by using a STARTTLS command in the protocol. The internet has mostly gone to the "always encrypted"
+        rather than "upgrade" paradigm, so this is not the class to use.
+        MailBoxUnencrypted - Standard IMAP without SSL/TLS. You should not use this on the public internet.
+
+    The naming is a bit confusing. MailBox corresponds to imaplib.IMAP4_SSL;
+    MailBoxTls corresponds to imaplib.IMAP4, then using startls() on the resulting connection;
+    and MailboxUnencrypted corresponds to imaplib.IMAP4 with no security applied.
+    I imagine it's this way so the most common one (Mailbox) is a safe default.
+
+rambler mbox
+
+MailBoxUnencrypted
