--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,6 +1,5 @@
 Release 1.0.0 after 3 month of quiet in issues and merge requests
 
-
 https://stackoverflow.com/questions/72942311/ some to docs?
     The second problem is that you need to use imap_tools.MailBox.
     Looking at the documentation and source at the repo it appears that the relevant classes to use are:
@@ -17,5 +16,7 @@ https://stackoverflow.com/questions/72942311/ some to docs?
     I imagine it's this way so the most common one (Mailbox) is a safe default.
 
 rambler mbox
+
+GMX Mail Электронная почта
 
 MailBoxUnencrypted
