--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -35,3 +35,22 @@ https://github.com/sts0210/imap_tools/commit/36c0189600170fe573fa40620b09b53d010
      Encode folder before trying to move mail. Necessary for example when …
     …the folder has umlauts as in "Gelöschte Elemente"
     странный фикс в ветке
+
+IMAP_SERVERS = {
+    "outlook.com": "imap-mail.outlook.com",  # Outlook
+    "163.com": "imap.163.com",  # 163 Mail
+    "qq.com": "imap.qq.com",  # QQ Mail
+    "gmail.com": "imap.gmail.com",  # Gmail
+    "yahoo.com": "imap.mail.yahoo.com",  # Yahoo Mail
+    "icloud.com": "imap.mail.me.com",  # iCloud Mail
+    "hotmail.com": "imap-mail.outlook.com",  # Hotmail (Outlook)
+    "live.com": "imap-mail.outlook.com",  # Live (Outlook)
+    "sina.com": "imap.sina.com",  # Sina Mail
+    "sohu.com": "imap.sohu.com",  # Sohu Mail
+    "yahoo.co.jp": "imap.mail.yahoo.co.jp",  # Yahoo Mail Japan
+    "yandex.com": "imap.yandex.com",  # Yandex Mail
+    "mail.ru": "imap.mail.ru",  # Mail.ru
+    "aol.com": "imap.aol.com",  # AOL Mail
+    "gmx.com": "imap.gmx.com",  # GMX Mail
+    "zoho.com": "imap.zoho.com",  # Zoho Mail
+}
