--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,4 +1,6 @@
 
+move SortCriteria to consts
+
 + important hints to readme each part
 
 __str__
@@ -6,7 +8,7 @@ __str__
     'date from subj'
     thomwiggers
 
-fetch and uids examples
+fetch and uids examples?
 
 FULL
     Macro equivalent to: (FLAGS INTERNALDATE RFC822.SIZE ENVELOPE BODY)
